# nascent

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md
src/core/: CMakeLists.txt
src/core/include/: Accuracy.h  Attempt.h  Chart.h  Const.h  Hit.h  LaneKeys.h
src/core/src/: Accuracy.cpp  Attempt.cpp  Chart.cpp
src/game/: CMakeLists.txt
src/game/include/: EntityFFT.h  EntityField.h  GameNascent.h  InputManager.h  SceneList.h  ScenePlay.h  SceneTitle.h  SettingsManager.h  Skin.h  Util.h
src/game/src/: EntityFFT.cpp  EntityField.cpp  GameNascent.cpp  InputManager.cpp  SceneList.cpp  ScenePlay.cpp  SceneTitle.cpp  SettingsManager.cpp  Skin.cpp  Util.cpp
src/gse/: CMakeLists.txt
src/gse/include/: Entity.h  Game.h  Scene.h
src/gse/src/: Entity.cpp  Game.cpp  Scene.cpp
src/libs/: CMakeLists.txt
src/libs/json/: CMakeLists.txt
src/libs/miniaudio/: CMakeLists.txt  miniaudio.h
src/libs/olcPixelGameEngine/: CMakeLists.txt  olcPGEX_MiniAudio.h  olcPGEX_Shader.h  olcPGEX_TTF.h
src/main/: CMakeLists.txt  nascent_main.cpp
tools/: osu_converter.py  osu_parser.py
